--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v1.39.4
+- Fixed crash when creating backup of config.xml when config.xml.backup already exists
+
 v1.39.3
 - Fixed sorting stashes no more working
 
